# ohtuvarasto

./: .pylintrc  README.md  pyproject.toml  uusi1.py  uusi2.py
.github/workflows/: main.yml
src/: index.py  run.py  varasto.py
src/tests/: varasto_test.py  web_test.py
src/web/: app.py  forms.py  routes.py  storage.py
src/web/templates/: add_items.html  base.html  create_warehouse.html  edit_warehouse.html  index.html  remove_items.html  view_warehouse.html
